--- a/css/style.css
+++ b/css/style.css
@@ -755,6 +755,13 @@ video {
   transition-duration: 150ms;
 }
 
+.line-clamp-6 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 6;
+}
+
 @media (min-width: 768px) {
   .md\:top-7 {
     top: 1.75rem;
